fix css version mobile detail vente nouvelle vente

--- a/WebContent/css/detailvente.css
+++ b/WebContent/css/detailvente.css
@@ -2,11 +2,26 @@
 
 @charset "ISO-8859-1";
 
+.nomArticle{
+	font-size: 18px;
+	font-weight: 600;
+}
+
 .image{
 	width: 100%;
 	height: 150px;
 	background: black;
 }
+
+.label-bold{
+	font-weight: 600;
+	font-size: 14px;
+}
+
+p{
+	font-size: 12px;
+}
+
 
 @media (min-width: 1200px) { 
 	
@@ -20,8 +35,21 @@
 		margin-left:32px;
 	}
 	
+	.nomArticle{
+		font-size: 24px;
+	}
+	
 	.btn-back{
 		padding: 15px 30px 15px 30px;
+	}
+	
+	.label-bold{
+		font-weight: 600;
+		font-size: 16px;
+	}
+	
+	p{
+		font-size: 14px;
 	}
 	
 }
